# synthetic-consumer-research

./: .env.example  .gitignore  ACADEMIC_REFERENCES_UPDATE.md  CHANGELOG.md  CI_FIXES.md  CI_FIX_ROUND2.md  CONTRIBUTING.md  FINAL_COMMIT_MESSAGE.md  IMPLEMENTATION_SUMMARY.md  IMPROVEMENTS_SUMMARY.md  LICENSE  PERSONA_DIVERSITY_STRATEGY.md  QUICKSTART.md  README.md  SSR_IMPLEMENTATION.md  SSR_V3_CHANGELOG.md  main.py  pyproject.toml  run.sh
.cursor/commands/: push.md
.github/workflows/: ci.yml
architecture/: initial_architecture.md
config/: prompts.yaml  settings.yaml
docs/: ENHANCED_METRICS_PROPOSAL.md  ETHICS.md  METHODOLOGY.md  README.md  SETUP.md
src/: __init__.py  main.py
src/agents/: __init__.py  critic.py  ideator.py  market_predictor.py  persona_generator.py
src/orchestration/: __init__.py  workflow.py
src/post_composer/: __init__.py  asset_bundler.py  linkedin_composer.py  x_composer.py
src/utils/: __init__.py  api_manager.py  config_loader.py  exceptions.py  file_manager.py  logger.py  models.py
src/visualization/: __init__.py  image_gen.py  infographic.py
tests/: __init__.py  test_basic.py  test_config.py  test_exceptions.py  test_models.py  test_pmf_calculation.py
